<resources>
    <string name="app_name">MyLaundry</string>
    <string name="NL">NL</string>
    <string name="EL">EL</string>
    <string name="NI">NI</string>
    <string name="EI">EI</string>
    <string name="WhiteNL">White-NL</string>
    <string name="WhiteEL">White-EL</string>

    <string-array name="services">
        <item>@string/NL</item>
        <item>@string/EL</item>
        <item>@string/NI</item>
        <item>@string/EI</item>
        <item>@string/WhiteNL</item>
        <item>@string/WhiteEL</item>
    </string-array>

    <string-array name="starch">
        <item>NS</item>
        <item>LS</item>
        <item>MS</item>
        <item>TS</item>
    </string-array>

    <string-array name="packaging">
        <item>F</item>
        <item>H</item>
    </string-array>


    <string name="action_settings">Settings</string>
    <string name="Tip">Please pair with bluetooth printer then complete the connection inorder to print Job Card!</string>
    <string name="Welcome">\tMy Laundry NG \nName: Customer name goes here
        \nBranch: Cust location goes here \nPickUp Date: .........
        \nDelivery Date: .......... \nItem\tService\tPrice\tQty\tNetPrice \n\n\n
        \nTotal Qty: ......... \nDiscount: ......... \nTotal Price: .........
        \n\nThank you for choosing
        \nMy Laundry NG!!! \n\n\n
    </string>
    <string name="printJobCard">Print JobCard</string>
    <string name="viewJobCard">View JobCard</string>
    <string name="CutPaper">Cut Paper</string>
    <string name="PrintContent">Please enter your content to print!</string>
    <string name="Logs">posPrinter©-2015</string>
    <string name="PrintFaild">Print failed …</string>
    <string name="OpenCashFaild">Open cash failed …</string>
    <string name="CutPaperFaild">Cut paper failed …</string>
    <string name="PlsConnectButtonPrinter">Please put the device connected to the bluetooth printer !</string>
    <string name="Connecting">Connecting</string>
    <string name="Disconnected">Disconnected</string>
    <string name="Connected">Connected</string>
    <string name="PlsChoiceDevice">Please select a paired devices …</string>
    <string name="NotBluetoothAdapter">Not bluetooth adapter</string>
    <string name="XPrinterhint">Bluetooth was not opened,or not paired device.\nOpen bluetooth now ?</string>
    <string name="ConnectFailed">ConnectFailed …</string>
    <string name="app_label">MyLaundry.ng</string>

</resources>
