<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#d4fbfb"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context=".PrintActivity">

    <include layout="@layout/appbar_layout"/>

    <TextView
        android:id="@+id/textTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dkGray"
        android:layout_below="@id/ab_genAppBar"
        android:text="@string/Tip"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/deviceSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textTip"
        android:layout_alignEnd="@id/textTip"
        android:layout_below="@+id/textTip" />

    <Button
        android:id="@+id/btn_Connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_below="@id/deviceSpinner"
        android:text="@string/Disconnected" />


    <Button
        android:id="@+id/btn_printJobCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_Connect"
        android:layout_toEndOf="@id/btn_Connect"
        android:layout_below="@+id/btn_Connect"
        android:text="@string/printJobCard" />


    <Button
        android:id="@+id/btn_viewJobCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_alignStart="@+id/btn_Connect"
        android:layout_alignEnd="@id/btn_Connect"
        android:layout_below="@+id/btn_printJobCard"
        android:text="@string/viewJobCard" />

    <Button
        android:id="@+id/ButtonCutPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_printJobCard"
        android:layout_alignEnd="@id/btn_printJobCard"
        android:layout_alignTop="@+id/btn_viewJobCard"
        android:layout_below="@+id/btn_printJobCard"
        android:text="@string/CutPaper" />

    <TextView
        android:id="@+id/textXPrinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextLogs"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textTip"
        android:gravity="bottom"
        android:background="#03bcbc"
        android:text="@string/Logs" />

    <TextView
        android:id="@+id/TextLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/textXPrinter"
        android:background="#03bcbc"
        android:text="@string/Logs" />



</RelativeLayout>